# retriever_app

./: MANIFEST.in  README.md  constants.py.template  custom_text.json  example_grants.txt  get_data.py  main_functions.py  pyproject.toml  refresh_data.py  requirements.txt  retriever_app.html
.github/workflows/: test.yml
src/retrieverapp/: Logger.py  get_data.py  main_functions.py  refresh_data.py
src/retrieverapp/template/: custom_text.json  retriever_app.html
terms/: library_strategy_tag.csv
